--- a/sources/Imaging.Library/Imaging.Library.csproj
+++ b/sources/Imaging.Library/Imaging.Library.csproj
@@ -49,11 +49,13 @@
     <Compile Include="Entities\ConvolutionMatrix.cs" />
     <Compile Include="Entities\EdgePoints.cs" />
     <Compile Include="Entities\HoughLine.cs" />
+    <Compile Include="Filters\BasicFilters\BicubicFilter.cs" />
     <Compile Include="Filters\BasicFilters\ColorPalletteFilter.cs" />
     <Compile Include="Filters\BasicFilters\HistogramFilter.cs" />
     <Compile Include="Filters\BasicFilters\LineDrawFilter.cs" />
     <Compile Include="Filters\BasicFilters\OtsuThresholdFilter.cs" />
     <Compile Include="Filters\BasicFilters\PixelInterpolation.cs" />
+    <Compile Include="Filters\BasicFilters\ThresholdFilter.cs" />
     <Compile Include="Filters\ComplexFilters\BlobCounter.cs" />
     <Compile Include="Filters\ComplexFilters\CannyEdgeDetector.cs" />
     <Compile Include="Filters\ComplexFilters\ConvolutionFilter.cs" />
@@ -72,11 +74,11 @@
     <Compile Include="Enums\ShapeType.cs" />
     <Compile Include="Extensions\LineExtension.cs" />
     <Compile Include="Extensions\PointExtension.cs" />
-    <Compile Include="Filters\BasicFilters\ThresholdFilter.cs" />
     <Compile Include="Interfaces\IBlobsFilter.cs" />
     <Compile Include="Maths\ConvexHull.cs" />
     <Compile Include="Maths\FlatAnglesOptimizer.cs" />
     <Compile Include="Maths\GeometryTools.cs" />
+    <Compile Include="Maths\Interpolation.cs" />
     <Compile Include="Maths\PointsCloud.cs" />
     <Compile Include="Maths\SimpleShapeChecker.cs" />
     <Compile Include="Maths\DimensionConverter.cs" />
