Readme and images

--- a/.gitignore
+++ b/.gitignore
@@ -149,9 +149,7 @@ publish/
 # checkin your Azure Web App publish settings, but sensitive information contained
 # in these scripts will be unencrypted
 PublishScripts/
-
-# NuGet Packages
-*.nupkg
+ 
 # The packages folder can be ignored because of Package Restore
 **/packages/*
 # except build/, which is used as an MSBuild target.
@@ -250,3 +248,4 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+/nuget/Imaging.Library.1.0.0.nupkg
