--- a/samples/Wpf/EdgeDetection/EdgeDetection.csproj
+++ b/samples/Wpf/EdgeDetection/EdgeDetection.csproj
@@ -100,6 +100,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\sources\Imaging.Library\Imaging.Library.csproj">
+      <Project>{E0AFFF7A-47B5-4BAC-8FC4-954302C08624}</Project>
+      <Name>Imaging.Library</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
