--- a/sources/Imaging.Library/Imaging.Library.nuspec
+++ b/sources/Imaging.Library/Imaging.Library.nuspec
@@ -1,8 +1,9 @@
 <?xml version="1.0"?>
+
 <package>
   <metadata>
     <id>Imaging.Library</id>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <title>PCL Imaging Library for Document Scanning</title>
     <authors>Engin KIRMACI</authors>
     <owners>Engin KIRMACI</owners>
@@ -13,7 +14,7 @@
     <description>
       PCL Imaging Library for Document Scanning, contains Canny edge detection, Blob counter, quadrilateral transformation and many more.
       Check samples in github.
-      This package is compatible with the following .net platforms: net46+uwp10+dnxcore50
+      This package is compatible with the following .net platforms: net45+dnxcore50+win8+Xamarin.Android+Xamarin.iOS+Xamarin.Mac
     </description>
     <releaseNotes>Initial release</releaseNotes>
     <copyright>Copyright 2017</copyright>
