--- a/samples/Xamarin/EdgeDetection.Forms/iOS/Info.plist
+++ b/samples/Xamarin/EdgeDetection.Forms/iOS/Info.plist
@@ -48,5 +48,7 @@
     </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs access to photos.</string>
   </dict>
 </plist>
