--- a/samples/Xamarin/EdgeDetection.Forms/EdgeDetection.Forms/EdgeDetection.Forms.csproj
+++ b/samples/Xamarin/EdgeDetection.Forms/EdgeDetection.Forms/EdgeDetection.Forms.csproj
@@ -38,6 +38,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AndroidHelper.cs" />
+    <Compile Include="Helpers\iOSHelper.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
